--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="C:\Users\vtw14\OneDrive\Desktop\Projects\hover_effects\css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title></title>
   </head>
